# progress-bot

./: .env  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Procfile  README.md  Rocket.toml  RustConfig  docker-compose.yml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: README.md  build-and-push.yml
k8s/: README.md  deployment.yaml  ingress.yaml  reminders-cronjob.yaml  secrets.yaml.example  service.yaml
migrations/2019-08-29-214712_create_users/: up.sql
migrations/2019-09-01-110056_create_standups/: down.sql  up.sql
migrations/2019-09-01-200906_create_teams/: up.sql
migrations/2019-09-01-205837_add_team_id_to_user/: down.sql  up.sql
migrations/2019-09-02-191450_add_last_notified_to_users/: down.sql  up.sql
migrations/2019-09-24-080227_add_message_ts_to_standups/: down.sql  up.sql
migrations/2019-09-24-083409_add_channel_to_standup/: down.sql  up.sql
migrations/2019-09-24-204310_add_tss_to_standups/: down.sql  up.sql
migrations/2019-09-24-204323_add_team_to_standups/: down.sql  up.sql
migrations/2019-09-26-082325_add_done_array_to_standups/: down.sql  up.sql
migrations/2019-10-05-093940_add_local_date_to_standup/: down.sql  up.sql
migrations/2019-10-05-093951_add_intro_message_ts_to_standup/: down.sql  up.sql
src/: handle.rs  lib.rs  main.rs  models.rs  reminders.rs  schema.rs  slack.rs
