[package]
name = "progress_bot"
version = "0.1.0"
authors = ["ruiramos <rui@ometria.com>"]
edition = "2021"
default-run = "main"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
base64 = "0.22"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }

